.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Job_Code__c.object
<CustomObject>
    <description>Used for OIM Integration. Job and Department codes</description>
    <fields>
        <fullName>Account_Required__c</fullName>
        <inlineHelpText>Do the users with this Job Code require a Salesforce account?</inlineHelpText>
        <label>Salesforce Account Required</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Forecasting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Forecasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Job or Department code</inlineHelpText>
        <label>Code</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <inlineHelpText>Which license type should this role have by default?</inlineHelpText>
        <label>License Type</label>
        <picklist>
            <controllingField>Account_Required__c</controllingField>
            <picklistValues>
                <fullName>Chatter Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Additional details about the Job:
CTI user
User travels
Clarification about Sales or Service position</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Settings__c</fullName>
        <inlineHelpText>Users must be added to report folders or other folder access required.
User email must be added to a workflow.</inlineHelpText>
        <label>Other Settings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Sets__c</fullName>
        <description>What permission sets are needed</description>
        <inlineHelpText>Knowledge Permission set requires knowledge checkbox.</inlineHelpText>
        <label>Permission Sets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Groups__c</fullName>
        <label>Public Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Membership__c</fullName>
        <inlineHelpText>Membership for reference, assignments are controlled by Group Memberships.</inlineHelpText>
        <label>Queue Membership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receive_SF_CRM_Content_Alerts_Daily_Dgst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive SF CRM Content Alerts Daily Dgst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_SF_CRM_Content_Email_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive SF CRM Content Email Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_CRM_Content_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce CRM Content User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Classic_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Classic User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Instance__c</fullName>
        <description>Which Salesforce instance does this user require an account in?</description>
        <inlineHelpText>Which Salesforce instance does this user require an account in?</inlineHelpText>
        <label>Salesforce Instance</label>
        <picklist>
            <controllingField>Account_Required__c</controllingField>
            <picklistValues>
                <fullName>ATX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Cloud_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All Service user profiles need this</inlineHelpText>
        <label>Service Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Provided by user&apos;s manager.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Job or Department Code?</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Job Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept Code</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Code</label>
    <listViews>
        <fullName>All_Job_and_Department_Codes</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Account_Required__c</columns>
        <columns>License_Type__c</columns>
        <columns>Salesforce_Instance__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Job and Department Codes</label>
        <sharedTo>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dept_Codes</fullName>
        <columns>Type__c</columns>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Dept Code</value>
        </filters>
        <label>Dept Codes</label>
        <sharedTo>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Job_Codes</fullName>
        <columns>Type__c</columns>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Account_Required__c</columns>
        <columns>License_Type__c</columns>
        <columns>Salesforce_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Job Code</value>
        </filters>
        <label>Job Codes</label>
        <sharedTo>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Job_Codes_Acct_Required</fullName>
        <columns>Type__c</columns>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Account_Required__c</columns>
        <columns>License_Type__c</columns>
        <columns>Salesforce_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Job Code</value>
        </filters>
        <filters>
            <field>Account_Required__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Job Codes - Acct Required</label>
        <sharedTo>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>